--- a/templates/add_chap.html
+++ b/templates/add_chap.html
@@ -5,14 +5,10 @@
         <meta name="viewport" content="width=device-width;initial-scale=1.0">
         <title>Add Chapter</title>
         <link rel="stylesheet" href="/static/nav.css">
+        <link rel="stylesheet" href="/static/addeditany.css">
         <style>
-            main{
-                align-items: center;
-                margin-top: 100px;
-            }
-            legend{
-                text-align: center;
-            }
+            
+
         </style>
     </head>
     <body>
@@ -28,19 +24,19 @@
                         <input type="search" name="search" id="search" placeholder="Search for quizzes">
                     </div>
                     <div class="down2">
-                    <button>Welcome Admin</button>
-                </div>
-                    <div class="drop">
-                        <a href="#">Edit password</a>
-                        <a href="{{url_for('logout')}}">Logout</a>
+                        <button>Welcome Admin</button>
+                        <div class="drop">
+                            <a href="#">Edit password</a>
+                            <a href="{{url_for('logout')}}">Logout</a>
+                        </div>
                     </div>
                 </div>
             </nav>
         </header>
         <main>
             <h1>{{sub_name}}</h1>
-            <fieldset>
-                <legend>Add Chapter</legend>
+            <div>
+                <b><legend>Add Chapter</legend></b>
                 <form action="{{url_for('add_chap',subject_id=subject_id) }}" method="POST">
                     <label for="cname">Chapter Name:</label>
                     <input type="text" name="cname" id="cname" required>
@@ -51,7 +47,8 @@
                     <br>
                     <input type="submit" value="Submit">
                 </form>
-            </fieldset>
-        </main>
+            </div>
+            <a class="goback" style="color: black;" href="{{url_for('admin_home')}}">Go back</a>
+        </main> 
     </body>
 </html>
