--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -68,6 +68,9 @@
             </a>
             <a href="{{ url_for('del_sub', subject_id=sub['id']) }}" onclick="return confirm('Are you sure you want to delete the subject? All the chapters and quizzes associated with it will also be deleted')">
                 <button class="but butdel">Delete Subject</button>
+            </a>            
+            <a href="{{ url_for('edit_sub', subject_id=sub['id']) }}" >
+                <button class="but butedit">Edit Subject</button>
             </a>
         </div>
             {% endfor %}
