--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width;initial-scale=1.0">
-        <title>Add Quiz</title>
+        <title>Edit Quiz</title>
         <link rel="stylesheet" href="/static/nav.css">
         <link rel="stylesheet" href="/static/addeditany.css">
     </head>
