--- a/templates/add_chap.html
+++ b/templates/add_chap.html
@@ -33,7 +33,7 @@
         <main>
             <h1>{{sub_name}}</h1>
             <div>
-                <b><legend>Add Chapter</legend></b>
+                <b><legend id="asub">Add Chapter</legend></b>
                 <form action="{{url_for('add_chap',subject_id=subject_id) }}" method="POST">
                     <label for="cname">Chapter Name:</label>
                     <input type="text" name="cname" id="cname" required>
