--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -13,7 +13,7 @@
                 <div class="navbar">
                     <a href="{{url_for('admin_home')}}">Home</a>
                     <a href="{{url_for('allusers')}}">Users</a>
-                    <a href="{{url_for('summary')}}">Summary</a>
+                    <a href="{{url_for('user_summary')}}">Summary</a>
                 </div>
                 <div class="down">
                     <div class="search-container">
